<resources>
    <string name="app_name">graduateproject</string>
    <string name="_10">10</string>
    <string name="_8_8">8.8</string>
    <string name="avengers_end_game">Avengers : End game</string>
    <string name="vote">vote :</string>
    <string name="popularity">Popularity :</string>
    <string name="relesed_data">Relesed data :</string>
    <string name="vote_count">Vote Count :</string>

    <string name="_234">234</string>
    <string name="_145345">145345</string>
    <string name="_2020_4_5">2020-4-5</string>
    <string name="avengers_end_game_after_civiel_war">Avengers end game after civiel war</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_form">Login form</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="cinema_house">Cinema House</string>
    <string name="tv">TV</string>
    <string name="movie">Movie</string>
    <string name="person">Person</string>
    <string name="home">Home</string>
    <string name="top_movie_rated">Popular Movie</string>
    <string name="see_all"><![CDATA[<< See All]]></string>
    <string name="top_series_rated">Popular Series</string>
    <string name="popular_actors">Popular Actors</string>
    <string name="language">Language : </string>
    <string name="media_type">Media Type :</string>
    <string name="overview">Overview :</string>
    <string name="type">Type : </string>
    <string name="trailer">Trailer</string>
    <string name="search_a_specific_movie">Search a specific movie</string>
    <string name="searsh">Searsh</string>
    <string name="my_best">My Best</string>
    <string name="textview">TextView</string>
</resources>