<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.LogInFragment"
    android:background="@color/bgcolor">


    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="141dp"
        android:text="@string/login_form"
        android:textStyle="bold"
        android:textSize="@dimen/font3"
        android:textColor="@color/font"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <EditText
        android:id="@+id/et_email_loginfrag"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/email"
        android:background="@color/white"
        android:textSize="@dimen/font4"
        android:textStyle="bold"
        android:textColorHint="@color/hint"
        android:textColor="@color/bgcolor"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        tools:ignore="RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_password_loginfrag"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:background="@color/white"
        android:textSize="@dimen/font4"
        android:textStyle="bold"
        android:textColor="@color/bgcolor"
        android:paddingStart="10dp"
        android:textColorHint="@color/hint"
        app:layout_constraintEnd_toEndOf="@+id/et_email_loginfrag"
        app:layout_constraintStart_toStartOf="@+id/et_email_loginfrag"
        app:layout_constraintTop_toBottomOf="@+id/et_email_loginfrag"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btn_login_loginfrag"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/log_in"
        android:backgroundTint="@color/light_bgcolor"
        app:layout_constraintStart_toStartOf="@+id/et_password_loginfrag"
        app:layout_constraintTop_toBottomOf="@+id/et_password_loginfrag" />

    <Button
        android:id="@+id/btn_rigister_loginfrag"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:backgroundTint="@color/light_bgcolor"
        app:layout_constraintEnd_toEndOf="@+id/et_password_loginfrag"
        app:layout_constraintTop_toBottomOf="@+id/et_password_loginfrag" />

    <ProgressBar
        android:id="@+id/prog_loginfrag"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

</androidx.constraintlayout.widget.ConstraintLayout>