<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment"
    android:background="@color/bgcolor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/tv_search_homefrag"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:gravity="center|start"
                android:textSize="19sp"
                android:background="@drawable/search_view"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/search_a_specific_movie"
                android:textStyle="bold"
                android:textColor="@color/hint"
                android:autofillHints=""
                app:drawableStartCompat="@drawable/ic_search" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/top_movie_rated"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_search_homefrag" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/sr_movie_homefrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:shimmer_recycler_layout="@layout/shimmer_card_layout"
                app:shimmer_recycler_item_count="5"
                app:layout_constraintEnd_toEndOf="@+id/textView14"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/tv_seeall_movie_homefrag" />

            <TextView
                android:id="@+id/tv_seeall_movie_homefrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView155"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/top_series_rated"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/sr_movie_homefrag"
                app:layout_constraintStart_toStartOf="@+id/sr_movie_homefrag"
                app:layout_constraintTop_toBottomOf="@+id/sr_movie_homefrag" />

            <TextView
                android:id="@+id/tv_seeall_series_homefrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView155"
                app:layout_constraintTop_toBottomOf="@+id/textView155" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/sr_series_homefrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/textView155"
                app:layout_constraintHorizontal_bias="0.0"
                app:shimmer_recycler_layout="@layout/shimmer_card_layout"
                app:shimmer_recycler_item_count="5"
                app:layout_constraintStart_toStartOf="@+id/tv_seeall_series_homefrag"
                app:layout_constraintTop_toBottomOf="@+id/tv_seeall_series_homefrag" />

            <TextView
                android:id="@+id/textView55"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/popular_actors"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/sr_series_homefrag"
                app:layout_constraintStart_toStartOf="@+id/sr_series_homefrag"
                app:layout_constraintTop_toBottomOf="@+id/sr_series_homefrag" />

            <TextView
                android:id="@+id/tv_seeall_people_homefrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="1000dp"
                android:text="@string/see_all"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/textView55"
                app:layout_constraintTop_toBottomOf="@+id/textView55" />

            <com.todkars.shimmer.ShimmerRecyclerView
                android:id="@+id/sr_person_homefrag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView55"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_seeall_people_homefrag"
                app:layout_constraintTop_toBottomOf="@+id/tv_seeall_people_homefrag"
                app:shimmer_recycler_item_count="5"
                app:shimmer_recycler_layout="@layout/shimmer_card_layout" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>